--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section{
   max-width: 550px;
   margin-top: 10px;
   border-radius: 25px;
-  background-color: #1F7153;
+  background-color: #3d83b9;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
